# SFCGAL

./: .cirrus.yml  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CI-INTEGRATION.md  CMakeLists.txt  NEWS  README.md  sonar-project.properties  vcpkg.json
.github/workflows/: arm.yml  bsd.yml  codeql.yml  msys.yml  vcpkg.yml
.gitlab/: generate-homebrew.sh
.gitlab/pipeline/: build-debian-docker.yml  build-linux-debian.yml  build-linux-fedora.yml  build-linux-opensuse.yml  build-linux.yml  build-macos.yml  build-windows.yml  clang-tidy.yml  commitizen.yml  (+8 more)
doc/: Doxyfile.in
docker/: Dockerfile.debian
example/: CMakeLists.txt
requirements/: website.txt
script/: doxygen-check.sh  merge_boost_reports_to_cppunit.py
sfcgalop/: CMakeLists.txt  README.md  constructors.cpp  constructors.hpp  error_handler.cpp  error_handler.hpp  getopt_win.cpp  getopt_win.hpp  io.cpp  io.hpp  main.cpp  text_ui.cpp  text_ui.hpp  timeus.hpp  util.cpp  util.hpp
sfcgalop/operations/: operations.cpp  operations.hpp  operations_analysis.cpp  operations_analysis.hpp  operations_boolean.cpp  operations_boolean.hpp  operations_collections.cpp  operations_collections.hpp  operations_construction.cpp  operations_construction.hpp  operations_constructors.cpp  operations_constructors.hpp  operations_conversions.cpp  operations_conversions.hpp  operations_metrics.cpp  operations_metrics.hpp  operations_predicates.cpp  operations_predicates.hpp  operations_processing.cpp  operations_processing.hpp  operations_registry.cpp  operations_registry.hpp  operations_set.cpp  operations_set.hpp  operations_transformations.cpp  operations_transformations.hpp
sfcgalop/test/: CMakeLists.txt  test_minimal.cpp
src/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  Curve.cpp  Curve.h  DereferenceIterator.h  Envelope.cpp  Envelope.h  Exception.cpp  Exception.h  Geometry.cpp  Geometry.h  GeometryCollection.cpp  GeometryCollection.h  GeometryVisitor.cpp  GeometryVisitor.h  Kernel.h  LineString.cpp  LineString.h  MultiLineString.cpp  MultiLineString.h  MultiPoint.cpp  MultiPoint.h  MultiPolygon.cpp  MultiPolygon.h  MultiSolid.cpp  MultiSolid.h  NURBSCurve.cpp  NURBSCurve.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  PolyhedralSurface.cpp  PolyhedralSurface.h  PreparedGeometry.cpp  PreparedGeometry.h  Segment.cpp  Segment.h  Simplicity.h  (+18 more)
website/: macros.py  mkdocs.yml
(+441 files in other folders)
